--- a/source/analysis.Rmd
+++ b/source/analysis.Rmd
@@ -5,7 +5,7 @@ date: "2023-01-17"
 output: html_document
 ---
 
-### Summary
+
 #### Input Data: https://github.com/fivethirtyeight/data/tree/master/bad-drivers
 #### Article: https://fivethirtyeight.com/features/which-state-has-the-worst-drivers/
 
@@ -17,23 +17,25 @@ We will be examining the reproducibility of fivethirtyeight articles using the f
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r load libraries, warnings= FALSE, message=FALSE}
-library(tidyverse)
-library(RCurl)
-```
 
 
 The data is loaded from GitHub, where a chart displays the source information for each column. In the graphs that we will be reproducing below, the original source of the data is the National Highway Traffic Safety Administration (NHTSA). It is not clear based on the GitHub or the fivethirtyeight article how the data was wrangled to produce this dataset. Importantly, the NHTSA is a survey dataset, so it is not clear if the weights have been properly incorporated into the dataset. This dataset was accessed on Tuesday, January 17, 2023. It was last updated December 16, 2022. 
 
-There are 8 columns of the data, and the names are listed below. The README of fivethirtyeight's GitHub repository shares the original source of each file (however without wrangling steps to get the original source into this clean format). As we are only reproducing 3 figures, it will 
+There are 8 columns of the data, and the names are listed below. The README of fivethirtyeight's GitHub repository shares the original source of each file (however without wrangling steps to get the original source into this clean format). As we are only reproducing 2 figures, it will only be depending on the 2009 and 2012 data from the NHTSA. NHTSA provides several datasets each year; presumably, the data here is coming from the Fatality Analysis Reporting System (FARS), although fivethirtyeight does not specify this or which variables they used. However, the variable names that they have generated are clear and very descriptive, so it is easy to identify which variables they use to create each of the visualizations.
 
+```{r load libraries, warnings= FALSE, message=FALSE}
+library(tidyverse)
+library(RCurl)
+```
 
 ```{r load data, cache=TRUE}
 gitData <- getURL("https://raw.githubusercontent.com/fivethirtyeight/data/master/bad-drivers/bad-drivers.csv")
 carCrashes <- read.csv(text = gitData)
 names(carCrashes)
 ```
-The first figure we will reproduce is titled "Drivers Involved In Fatal Collisions While Speeding As a share of the number of fatal collisions per billion miles, 2009". 
+
+The first figure we will reproduce is titled "Drivers Involved In Fatal Collisions While Speeding As a share of the number of fatal collisions per billion miles, 2009". To do this, we need to first generate a column that contains discrete counts of drivers involved in fatal collisions while speeding by taking the total number of the collisions and multiplying it by the percent of fatal collisions that had drivers who were speeding. This is not quite accurate--the total number of fatal collisions is given for 2012, while the percentage of speeding collisions is given for 2009 because at the time of publication, the author could not access speeding data past 2009 from NHTSA. There is no column given of fatal collisions for 2009, only 2012, so we must assume that the author has used the 2012 data with the 2009 percentages. Upon visual inspection, the plot generated is very similar to that of the publication. 
+
 ```{r speeding collisions, fig.asp=1.3, cache=TRUE}
 #add a column of counts of speeding related collisions
 carCrashes <- carCrashes %>% mutate(fatalSpeedingAccidentsPerBillionMiles = Number.of.drivers.involved.in.fatal.collisions.per.billion.miles * Percentage.Of.Drivers.Involved.In.Fatal.Collisions.Who.Were.Speeding * 0.01)
@@ -50,7 +52,10 @@ ggplot(data=carCrashes) +
   theme(legend.position="top")
 ```
 
-The second figure we will reproduce is titled "Drivers Involved In Fatal Collisions While Alchol-Impaired As a share of the number of fatal collisions per billion miles, 2012". 
+
+
+The second figure we will reproduce is titled "Drivers Involved In Fatal Collisions While Alchol-Impaired As a share of the number of fatal collisions per billion miles, 2012". Again we will first create a column with a discrete count of the number of fatal collisions where the driver was alcohol impaired, and we will then generate the plot. When visually compared with the plot from the article, we can see again they look very similar.
+
 ```{r alcohol collisions, fig.asp=1.3, cache=TRUE}
 #add a column of counts of alcohol related collisions
 carCrashes <- carCrashes %>% mutate(fatalAlcoholAccidentsPerBillionMiles = Number.of.drivers.involved.in.fatal.collisions.per.billion.miles * Percentage.Of.Drivers.Involved.In.Fatal.Collisions.Who.Were.Alcohol.Impaired * 0.01)
@@ -68,6 +73,6 @@ ggplot(data=carCrashes) +
 ```
 
 
-
-There is not a clear explanation on why different years were selected for the visualizations. It would be interesting to know if these are based purely on data availability, if some years contain more interesting trends, or if the authors just wanted to give an idea of driving behaviors in the U.S.A. over time. The number of collisions per billion miles was given for year 2012, but the percent of collisions per billion miles while speeding is given for 2009. Therefore, it seems that all the numbers for this section will be wrong. At the time the article was written, the author claimed that the most recent data from the NHTSA regarding speeding was from 2009, which is why they used percentages from 2009 rather than 2012. However, there is not a column in the dataset with the total crashes from 2009, and this was not mentioned in the article.
+#### Article Reproducibility
+As we have noted above, the number of collisions per billion miles was given for year 2012, but the percent of collisions per billion miles while speeding is given for 2009. Therefore, it seems that all the numbers for this section will be wrong. At the time the article was written, the author claimed that the most recent data from the NHTSA regarding speeding was from 2009, which is why they used percentages from 2009 rather than 2012. However, there is not a column in the dataset with the total crashes from 2009, and this was not mentioned in the article. It was mentioned briefly in the article, but for more reproducibility, there should be information in the README or a notebook in the repository. Also, for reproducibility, the authors should put their code into the repository (or link another repository) for the visualizations to show more clearly how to get the information.
 
